Adaptations for taskCreate

--- a/app/elements/app-element.html
+++ b/app/elements/app-element.html
@@ -83,7 +83,11 @@
 					</section>
 
 					<section data-route="task-create">
-						<task-form id="taskForm"></task-form>
+						<task-form id="taskForm" edit="false"></task-form>
+					</section>
+
+					<section data-route="task-edit">
+						<task-form id="taskEditForm" edit="true"></task-form>
 					</section>
 
 					<section data-route="user" class="fullHeight">
