--- a/app/elements/coder/challenge/tasks/general-code-task.html
+++ b/app/elements/coder/challenge/tasks/general-code-task.html
@@ -3,7 +3,6 @@
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
 <link rel="import" href="/elements/coder/code-editor/code-editor.html">
 <link rel="import" href="/elements/coder/code-editor/language-selector.html">
-<link rel="import" href="/elements/common/services/template-service.html">
 <link rel="import" href="task-display.html">
 <link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="/bower_components/iron-icons/av-icons.html">
@@ -69,7 +68,6 @@
 		}
 	</style>
 	<template>
-		<template-service id="templateService" task="{{task}}" on-templates="onTemplates"></template-service>
 		<div id="componentWrapper" class="horizontal layout">
 			<div class="flex">
 				<paper-material id="leftCard" elevation="1">
@@ -85,10 +83,9 @@
 				<paper-material id="botRightCard" elevation="1">
 					<div id="buttons" class="horizontal layout">
 						<paper-icon-button class="self-center" icon="av:play-arrow" on-click="runCode">Run code</paper-icon-button>
-						<language-selector class="self-center" id="languageSelector" languages="{{languages}}" language="{{language}}" on-language-change="languageChanged"></language-selector>
+						<language-selector class="self-center" id="languageSelector" language="{{language}}" task="{{task}}"></language-selector>
 							<paper-icon-button class="self-center" icon="av:play-arrow" on-click="runTests">Run tests</paper-icon-button>
 						<span class="flex"></span>
-						<!-- <input type="file" name="fileToRun" id="fileToRun" on-change="setFiles"> -->
 						<paper-button class="self-center" raised noink class$="{{finishedButtonClass}}" on-click="finishTask">Finish</paper-button>
 					</div>
 					<div id="consoleWrapper">
@@ -119,89 +116,18 @@
 				languages: {
 					type: Array,
 					notify: true
-				},
-				language: {
-					type: String,
-					notify: true
 				}
-			},
-			observers: [
-				'afterPropertiesSet(task)'
-			],
-			setFiles: function() {
-				var files = this.$.fileToRun.files;
-				if(files.length > 0){
-					this.$.codeEditor.setFile(files[0]);
-				}
-			},
-			afterPropertiesSet: function(){
-				this.languages = [{
-					tag: 'py',
-					name: 'Python'
-				},
-				{
-					tag: 'c',
-					name: 'C'
-				},
-				{
-					tag: 'cpp',
-					name: 'C++'
-				},
-				{
-					tag: 'java',
-					name: 'Java'
-				}];
-
-				if (!this.task.languages) {
-					return;
-				}
-
-				for (var i = 0; i < this.task.Languages.length; i++) {
-					var lang = { tag: this.task.Languages[i] };
-					switch (this.task.Languages[i]) {
-						case 'c':
-							lang.name = 'C';
-							break;
-						case 'cpp':
-							lang.name = 'C++';
-							break;
-						case 'java':
-							lang.name = 'Java';
-							break;
-						case 'py':
-							lang.name = 'Python';
-							break;
-						default:
-							lang.name = 'Undefined';
-							break;
-					}
-					this.push('languages', lang);
-				}
-				this.getTemplate(this.languages[0].tag);
-			},
-			languageChanged: function(e, languageTag){
-				// this.getTemplate(languageTag);
-				this.$.codeEditor.setMode(languageTag);
-			},
-			getTemplate: function(language){
-				this.$.templateService.getTemplates(language);
 			},
 			runCode: function(){
-				this.$.codeEditor.runCodeNormal();
+				this.$.codeEditor.run();
 				this.control.loading();
 			},
 			runTests: function(){
-				this.$.codeEditor.runCode();
+				this.$.codeEditor.submit();
 				this.control.loading();
 			},
 			finishTask: function(){
 				this.fire('task-finished');
-			},
-			onTemplates: function(e) {
-				if (!e.detail || e.detail.length === 0) {
-					console.log('Received no code template.');
-				}
-				this.$.codeEditor.setFile(e.detail[0]);
 			}
 		});
 	</script>
