--- a/app/elements/coder/challenge/tasks/ccc-drone-task.html
+++ b/app/elements/coder/challenge/tasks/ccc-drone-task.html
@@ -1,7 +1,6 @@
 <link rel="import" href="/elements/coder/code-editor/consoles/test-stats-console.html">
 <link rel="import" href="/elements/coder/code-editor/language-selector.html">
 <link rel="import" href="/elements/coder/challenge/tasks/task-display.html">
-<link rel="import" href="/elements/common/services/template-service.html">
 <link rel="import" href="/elements/coder/code-editor/code-editor.html">
 <link rel="import" href="/elements/coder/input-view/input-view.html">
 <link rel="import" href="/bower_components/paper-fab/paper-fab.html">
@@ -92,7 +91,6 @@
 	}
 </style>
 	<template>
-		<template-service id="templateService" task="{{task}}" on-templates="onTemplates"></template-service>
 		<div id="componentWrapper" class="horizontal layout">
 			<div class="flex">
 				<paper-material id="leftCard" elevation="1">
@@ -122,7 +120,7 @@
 					<paper-material id="botRightCard" elevation="1">
 						<div id="buttons" class="horizontal layout">
 							<paper-icon-button class="self-center" icon="av:play-arrow" on-click="runCode">Run code</paper-icon-button>
-							<language-selector class="self-center" id="languageSelector" languages="{{languages}}" language="{{language}}" on-language-change="languageChanged"></language-selector>
+							<language-selector class="self-center" id="languageSelector" task="{{task}}" language="{{language}}"></language-selector>
 							<span class="flex"></span>
 							<paper-button class="self-center" raised noink on-click="runTests">Run tests</paper-button>
 						</div>
@@ -143,10 +141,6 @@
 					type: Object,
 					notify: true,
 					reflectToAttribute: true
-				},
-				languages: {
-					type: Array,
-					notify: true
 				},
 				language: {
 					type: String,
@@ -198,76 +192,20 @@
 			},
 			afterPropertiesSet: function(){
 				this.selected = 1;
-					this.languages = [{
-						tag: 'py',
-						name: 'Python'
-					},
-					{
-						tag: 'c',
-						name: 'C'
-					},
-					{
-						tag: 'cpp',
-						name: 'C++'
-					},
-					{
-						tag: 'java',
-						name: 'Java'
-					}];
-
-					if (!this.task.languages) {
-						return;
-					}
-
-					for (var i = 0; i < this.task.Languages.length; i++) {
-						var lang = { tag: this.task.Languages[i] };
-						switch (this.task.Languages[i]) {
-							case 'c':
-								lang.name = 'C';
-								break;
-							case 'cpp':
-								lang.name = 'C++';
-								break;
-							case 'java':
-								lang.name = 'Java';
-								break;
-							case 'py':
-								lang.name = 'Python';
-								break;
-							default:
-								lang.name = 'Undefined';
-								break;
-						}
-						this.push('languages', lang);
-					}
-					this.getTemplate(this.languages[0].tag);
-			},
-			languageChanged: function(e, languageTag){
-				// this.getTemplate(languageTag);
-				this.$$('#codeEditor').setMode(languageTag);
-			},
-			getTemplate: function(language){
-				this.$.templateService.getTemplates(language);
 			},
 			runCode: function(){
-				this.$$('#codeEditor').runCodeNormal();
+				this.$$('#codeEditor').run();
 				this.$$('#console').hide();
 				this.normalConsoleText = 'Loading...';
 			},
 			runTests: function(){
 				this.normalConsoleText = '';
 				this.$$('#console').show();
-				this.$$('#codeEditor').runCode();
+				this.$$('#codeEditor').submit();
 				this.$$('#console').loading();
 			},
 			finishTask: function(){
 				this.fire('task-finished');
-			},
-			onTemplates: function(e) {
-				if (!e.detail || e.detail.length === 0) {
-					console.log('Received no code template.');
-				}
-				this.$$('#codeEditor').setFile(e.detail[0]);
 			}
 		});
 	</script>
