--- a/app/elements/company/challenge/challenge-create.html
+++ b/app/elements/company/challenge/challenge-create.html
@@ -54,10 +54,10 @@
 			_saveChallenge: function () {
 				this.challenge.inviteOnly = this.$.inviteOnly.checked;
 				if (!this.$.challengeForm.validate()){
-					console.log('invalid');
 					return;
 				}
-				this.$.challengeService.save(this.challengeTemplate, this.challenge);
+				this.challenge.templateId = this.challengeTemplate;
+				this.$.challengeService.save(this.challenge);
 			},
 			_clearChallenge: function(){
 				this.challengeTemplateToSave = {};
